--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>iEducate - Transforming Online Education</title>
-    <link rel="stylesheet" href="/css/design.css" />
-    <link rel="stylesheet" href="/css/responsive.css">
+    <link rel="stylesheet" href="design.css" />
+    <link rel="stylesheet" href="responsive.css">
   </head>
   <body>
     <nav class="navbar background h-nav">
       <ul class="nav-list v-class">
-        <div class="logo"><img src="/image/img.jpg" alt="logo" /></div>
+        <div class="logo"><img src="img.jpg" alt="logo" /></div>
         <li><a href="#home">Home</a></li>
         <li><a href="#about">About</a></li>
         <li><a href="#services">Services</a></li>
@@ -45,7 +45,7 @@
         </div>
         <div class="secondHalf">
           <img
-            src="image/student.jpg"
+            src="student.jpg"
             alt="student studying with the help of laptop"
           />
         </div>
